--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,48 +12,49 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 15:09]
+#+CAPTION: Clock summary at [2019-11-15 Fri 16:26]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *81:37* |       |       | 100.0 |
+| *Total time*                                               | *82:51* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 81:37   |       |       | 100.0 |
-| Active                                                     |         | 81:37 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  3:36 |   4.4 |
+| Stories                                                    | 82:51   |       |       | 100.0 |
+| Active                                                     |         | 82:51 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  3:36 |   4.3 |
 | Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
-| Time spent producing coding videos                         |         |       |  2:22 |   2.9 |
-| Sprint and product backlog grooming                        |         |       |  6:09 |   7.5 |
+| Time spent producing coding videos                         |         |       |  2:27 |   3.0 |
+| Sprint and product backlog grooming                        |         |       |  6:09 |   7.4 |
 | Remove test model sanitizer                                |         |       |  0:20 |   0.4 |
-| Remove master headers                                      |         |       |  1:12 |   1.5 |
-| Fix the issues with tests in reference model               |         |       |  3:53 |   4.8 |
+| Remove master headers                                      |         |       |  1:12 |   1.4 |
+| Fix the issues with tests in reference model               |         |       |  3:53 |   4.7 |
 | Update static strings to string views                      |         |       |  1:15 |   1.5 |
 | ODB include directories is incorrect                       |         |       |  1:43 |   2.1 |
 | Create a "modeling" report                                 |         |       |  4:56 |   6.0 |
 | Move visual studio related options to top profile          |         |       |  0:17 |   0.3 |
 | Fix incorrect message keyword when detecting ODB includes  |         |       |  0:29 |   0.6 |
 | Meta-data keys are in the inverse order                    |         |       |  0:39 |   0.8 |
-| Creating reference cycles produces strange errors          |         |       |  5:32 |   6.8 |
+| Creating reference cycles produces strange errors          |         |       |  5:32 |   6.7 |
 | Error on duplicate references                              |         |       |  0:26 |   0.5 |
 | Generate model dependency graph                            |         |       |  1:55 |   2.3 |
 | Make the building of the relational model conditional      |         |       |  0:23 |   0.5 |
 | Make all transform contexts code-generated                 |         |       |  0:08 |   0.2 |
 | Tracer numbering of dumped models is incorrect             |         |       |  0:26 |   0.5 |
 | Fix compilation errors in c++ impl nightly                 |         |       |  0:24 |   0.5 |
-| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.5 |
+| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.4 |
 | Some model names are too long for windows                  |         |       |  0:28 |   0.6 |
 | Fake type in injection.json model                          |         |       |  0:18 |   0.4 |
 | Add conditional logic for the inclusion of generated tests |         |       |  0:07 |   0.1 |
-| Split generated tests from manual tests                    |         |       |  5:51 |   7.2 |
+| Split generated tests from manual tests                    |         |       |  5:51 |   7.1 |
 | Use clang9 and GCC 9 in nightly and CI                     |         |       |  0:01 |   0.0 |
+| Full generation produces invalid code                      |         |       |  0:38 |   0.8 |
 | Time spent fixing emacs issues                             |         |       |  1:44 |   2.1 |
-| Move registrar into assets                                 |         |       |  5:29 |   6.7 |
-| Upgrade to boost 1.70                                      |         |       | 10:00 |  12.3 |
+| Move registrar into assets                                 |         |       |  5:29 |   6.6 |
+| Upgrade to boost 1.70                                      |         |       | 10:00 |  12.1 |
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
-| Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.9 |
-| Add relational tracing support                             |         |       |  6:52 |   8.4 |
-| Consider creating a test build for all facets              |         |       |  0:52 |   1.1 |
-| Code coverage has not been updated since September         |         |       |  0:33 |   0.7 |
+| Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.8 |
+| Add relational tracing support                             |         |       |  6:52 |   8.3 |
+| Consider creating a test build for all facets              |         |       |  0:52 |   1.0 |
+| Code coverage has not been updated since September         |         |       |  1:04 |   1.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -231,6 +232,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Time spent producing coding videos                        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 15:42]--[2019-11-15 Fri 15:47] =>  0:05
     CLOCK: [2019-11-15 Fri 10:35]--[2019-11-15 Fri 10:46] =>  0:11
     CLOCK: [2019-11-13 Wed 21:05]--[2019-11-13 Wed 21:20] =>  0:15
     CLOCK: [2019-11-13 Wed 08:18]--[2019-11-13 Wed 08:22] =>  0:04
@@ -1054,6 +1056,19 @@ Note that we cannot do the locator clean up until we sort out this mess.
 We seem to still be in clang 8 and gcc 8 in some places. Update the
 compilers.
 
+*** COMPLETED Full generation produces invalid code                   :story:
+    CLOSED: [2019-11-15 Fri 16:26]
+    :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 15:48]--[2019-11-15 Fri 16:26] =>  0:38
+    :END:
+
+When using full generation to build the utility model, we generate
+invalid forward declarations for serialisation - they are missing the
+includes. We need to understand what causes this and fix it.
+
+The problem was that we disabled forward declarations on this
+type. Enabling it fixes the issue.
+
 *** STARTED Time spent fixing emacs issues                            :story:
     :LOGBOOK:
     CLOCK: [2019-11-08 Fri 10:18]--[2019-11-08 Fri 10:43] =>  0:25
@@ -1443,6 +1458,7 @@ Notes:
 
 *** STARTED Code coverage has not been updated since September        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 15:10]--[2019-11-15 Fri 15:41] =>  0:31
     CLOCK: [2019-11-15 Fri 15:03]--[2019-11-15 Fri 15:09] =>  0:06
     CLOCK: [2019-11-15 Fri 14:35]--[2019-11-15 Fri 15:02] =>  0:27
     :END:
@@ -1450,13 +1466,6 @@ Notes:
 For some reason we have not been generating coverage reports for a
 couple of months. In addition, don't submit CI to both coveralls and
 codecov. We want CI to go to coveralls and nightlies to go to codecov.
-
-*** Serialisation forward declarations are cyclical                   :story:
-
-At present we are including the serialisation forward declaration from
-the types header, and also including the types header from the
-serialisation forward declaration. We should probably include the
-types forward declaration.
 
 *** Generated tests fail when model has nothing to test               :story:
 
@@ -2115,3 +2124,13 @@ dogen we seem to have lost this one.
 
 The test should create one or more empty folders inside the model, run
 code generation and ensure the folders are still there afterwards.
+*** CANCELLED Serialisation forward declarations are cyclical         :story:
+    CLOSED: [2019-11-15 Fri 16:02]
+
+*Rationale*: we were looking into the main serialisation header, not
+the forward declaration.
+
+At present we are including the serialisation forward declaration from
+the types header, and also including the types header from the
+serialisation forward declaration. We should probably include the
+types forward declaration.
