--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 17:59]
+#+CAPTION: Clock summary at [2019-11-15 Fri 18:04]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *83:42* |       |       | 100.0 |
+| *Total time*                                               | *83:46* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 83:42   |       |       | 100.0 |
-| Active                                                     |         | 83:42 |       | 100.0 |
+| Stories                                                    | 83:46   |       |       | 100.0 |
+| Active                                                     |         | 83:46 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  3:36 |   4.3 |
 | Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
 | Time spent producing coding videos                         |         |       |  2:27 |   2.9 |
@@ -28,7 +28,7 @@
 | Remove master headers                                      |         |       |  1:12 |   1.4 |
 | Fix the issues with tests in reference model               |         |       |  3:53 |   4.6 |
 | Update static strings to string views                      |         |       |  1:15 |   1.5 |
-| ODB include directories is incorrect                       |         |       |  1:43 |   2.1 |
+| ODB include directories is incorrect                       |         |       |  1:43 |   2.0 |
 | Create a "modeling" report                                 |         |       |  4:56 |   5.9 |
 | Move visual studio related options to top profile          |         |       |  0:17 |   0.3 |
 | Fix incorrect message keyword when detecting ODB includes  |         |       |  0:29 |   0.6 |
@@ -49,12 +49,12 @@
 | Full generation produces invalid code                      |         |       |  0:38 |   0.8 |
 | Code coverage has not been updated since September         |         |       |  1:19 |   1.6 |
 | Time spent fixing emacs issues                             |         |       |  1:44 |   2.1 |
-| Move registrar into assets                                 |         |       |  5:29 |   6.6 |
+| Move registrar into assets                                 |         |       |  5:29 |   6.5 |
 | Upgrade to boost 1.70                                      |         |       | 10:00 |  11.9 |
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
 | Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.7 |
 | Add relational tracing support                             |         |       |  6:52 |   8.2 |
-| Consider creating a test build for all facets              |         |       |  1:28 |   1.8 |
+| Consider creating a test build for all facets              |         |       |  1:32 |   1.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1417,6 +1417,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 18:00]--[2019-11-15 Fri 18:04] =>  0:04
     CLOCK: [2019-11-15 Fri 17:56]--[2019-11-15 Fri 17:59] =>  0:03
     CLOCK: [2019-11-15 Fri 16:42]--[2019-11-15 Fri 17:15] =>  0:33
     CLOCK: [2019-11-15 Fri 12:10]--[2019-11-15 Fri 12:38] =>  0:28
