--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 18:04]
+#+CAPTION: Clock summary at [2019-11-16 Sat 16:25]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *83:46* |       |       | 100.0 |
+| *Total time*                                               | *84:07* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 83:46   |       |       | 100.0 |
-| Active                                                     |         | 83:46 |       | 100.0 |
+| Stories                                                    | 84:07   |       |       | 100.0 |
+| Active                                                     |         | 84:07 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  3:36 |   4.3 |
 | Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
 | Time spent producing coding videos                         |         |       |  2:27 |   2.9 |
@@ -54,7 +54,7 @@
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
 | Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.7 |
 | Add relational tracing support                             |         |       |  6:52 |   8.2 |
-| Consider creating a test build for all facets              |         |       |  1:32 |   1.8 |
+| Consider creating a test build for all facets              |         |       |  1:53 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1417,6 +1417,9 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-16 Sat 16:22]--[2019-11-16 Sat 16:24] =>  0:02
+    CLOCK: [2019-11-16 Sat 16:16]--[2019-11-16 Sat 16:21] =>  0:05
+    CLOCK: [2019-11-16 Sat 16:01]--[2019-11-16 Sat 16:15] =>  0:14
     CLOCK: [2019-11-15 Fri 18:00]--[2019-11-15 Fri 18:04] =>  0:04
     CLOCK: [2019-11-15 Fri 17:56]--[2019-11-15 Fri 17:59] =>  0:03
     CLOCK: [2019-11-15 Fri 16:42]--[2019-11-15 Fri 17:15] =>  0:33
