--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,48 +12,48 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-16 Sat 16:25]
+#+CAPTION: Clock summary at [2019-11-16 Sat 19:13]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *84:07* |       |       | 100.0 |
+| *Total time*                                               | *86:54* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 84:07   |       |       | 100.0 |
-| Active                                                     |         | 84:07 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  3:36 |   4.3 |
-| Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
-| Time spent producing coding videos                         |         |       |  2:27 |   2.9 |
-| Sprint and product backlog grooming                        |         |       |  6:09 |   7.3 |
+| Stories                                                    | 86:54   |       |       | 100.0 |
+| Active                                                     |         | 86:54 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  3:36 |   4.1 |
+| Create a demo and presentation for previous sprint         |         |       |  1:39 |   1.9 |
+| Time spent producing coding videos                         |         |       |  2:27 |   2.8 |
+| Sprint and product backlog grooming                        |         |       |  6:09 |   7.1 |
 | Remove test model sanitizer                                |         |       |  0:20 |   0.4 |
 | Remove master headers                                      |         |       |  1:12 |   1.4 |
-| Fix the issues with tests in reference model               |         |       |  3:53 |   4.6 |
-| Update static strings to string views                      |         |       |  1:15 |   1.5 |
+| Fix the issues with tests in reference model               |         |       |  3:53 |   4.5 |
+| Update static strings to string views                      |         |       |  1:15 |   1.4 |
 | ODB include directories is incorrect                       |         |       |  1:43 |   2.0 |
-| Create a "modeling" report                                 |         |       |  4:56 |   5.9 |
+| Create a "modeling" report                                 |         |       |  4:56 |   5.7 |
 | Move visual studio related options to top profile          |         |       |  0:17 |   0.3 |
 | Fix incorrect message keyword when detecting ODB includes  |         |       |  0:29 |   0.6 |
-| Meta-data keys are in the inverse order                    |         |       |  0:39 |   0.8 |
-| Creating reference cycles produces strange errors          |         |       |  5:32 |   6.6 |
+| Meta-data keys are in the inverse order                    |         |       |  0:39 |   0.7 |
+| Creating reference cycles produces strange errors          |         |       |  5:32 |   6.4 |
 | Error on duplicate references                              |         |       |  0:26 |   0.5 |
-| Generate model dependency graph                            |         |       |  1:55 |   2.3 |
-| Make the building of the relational model conditional      |         |       |  0:23 |   0.5 |
+| Generate model dependency graph                            |         |       |  1:55 |   2.2 |
+| Make the building of the relational model conditional      |         |       |  0:23 |   0.4 |
 | Make all transform contexts code-generated                 |         |       |  0:08 |   0.2 |
 | Tracer numbering of dumped models is incorrect             |         |       |  0:26 |   0.5 |
 | Fix compilation errors in c++ impl nightly                 |         |       |  0:24 |   0.5 |
-| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.3 |
-| Some model names are too long for windows                  |         |       |  0:28 |   0.6 |
-| Fake type in injection.json model                          |         |       |  0:18 |   0.4 |
+| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.1 |
+| Some model names are too long for windows                  |         |       |  0:28 |   0.5 |
+| Fake type in injection.json model                          |         |       |  0:18 |   0.3 |
 | Add conditional logic for the inclusion of generated tests |         |       |  0:07 |   0.1 |
-| Split generated tests from manual tests                    |         |       |  5:51 |   7.0 |
+| Split generated tests from manual tests                    |         |       |  5:51 |   6.7 |
 | Use clang9 and GCC 9 in nightly and CI                     |         |       |  0:01 |   0.0 |
-| Full generation produces invalid code                      |         |       |  0:38 |   0.8 |
-| Code coverage has not been updated since September         |         |       |  1:19 |   1.6 |
-| Time spent fixing emacs issues                             |         |       |  1:44 |   2.1 |
-| Move registrar into assets                                 |         |       |  5:29 |   6.5 |
-| Upgrade to boost 1.70                                      |         |       | 10:00 |  11.9 |
+| Full generation produces invalid code                      |         |       |  0:38 |   0.7 |
+| Code coverage has not been updated since September         |         |       |  1:19 |   1.5 |
+| Time spent fixing emacs issues                             |         |       |  1:44 |   2.0 |
+| Move registrar into assets                                 |         |       |  5:29 |   6.3 |
+| Upgrade to boost 1.70                                      |         |       | 10:00 |  11.5 |
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
-| Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.7 |
-| Add relational tracing support                             |         |       |  6:52 |   8.2 |
+| Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.5 |
+| Add relational tracing support                             |         |       |  9:39 |  11.1 |
 | Consider creating a test build for all facets              |         |       |  1:53 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -1242,6 +1242,8 @@ Links:
 
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-16 Sat 17:22]--[2019-11-16 Sat 19:13] =>  1:51
+    CLOCK: [2019-11-16 Sat 16:25]--[2019-11-16 Sat 17:21] =>  0:56
     CLOCK: [2019-11-07 Thu 20:11]--[2019-11-07 Thu 20:40] =>  0:29
     CLOCK: [2019-11-07 Thu 19:55]--[2019-11-07 Thu 20:10] =>  0:15
     CLOCK: [2019-11-07 Thu 18:31]--[2019-11-07 Thu 18:33] =>  0:02
@@ -1294,7 +1296,7 @@ virtual template functions, it seems.
 
 Another alternative is to make the tracer aware of the model objects
 it is tracing. This is also not ideal because we would create cycles
-int he design.
+in the design.
 
 In effect we need to somehow implement a similar approach to the existing
 tracer: rely on global template functions a-la =operator<<= to
